# Qynerva

./: README.md  index.html  pyproject.toml  run.py  train_classification.py  train_segmentation.py
brainmrdiff/: README.md  pyproject.toml
brainmrdiff/configs/: default.yaml
brainmrdiff/scripts/: evaluate.py  generate.py  preprocess.py  train.py
brainmrdiff/src/brain_mri_diffusion/: __init__.py
brainmrdiff/src/brain_mri_diffusion.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
brainmrdiff/src/brain_mri_diffusion/data/: __init__.py  dataset.py  preprocessing.py
brainmrdiff/src/brain_mri_diffusion/evaluation/: __init__.py  metrics.py
brainmrdiff/src/brain_mri_diffusion/models/: __init__.py  diffusion.py  tsa.py  unet.py
brainmrdiff/src/brain_mri_diffusion/scripts/: evaluate.py  generate.py  preprocess.py  train.py
brainmrdiff/src/brain_mri_diffusion/training/: __init__.py  trainer.py
brainmrdiff/src/brain_mri_diffusion/utils/: __init__.py  checkpoint.py  logging.py
brats_seg_project/brats_seg_project/: README.md  evaluate_segmentation.py  pyproject.toml
brats_seg_project/brats_seg_project/configs/: train.yaml
brats_seg_project/brats_seg_project/src/brats_segmentation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
brats_seg_project/brats_seg_project/src/data/: dataset.py  splits.py  transforms.py
brats_seg_project/brats_seg_project/src/engine/: trainer.py
brats_seg_project/brats_seg_project/src/losses/: segmentation.py
brats_seg_project/brats_seg_project/src/models/: unet3d.py
brats_seg_project/brats_seg_project/src/scripts/: predict.py  train.py
brats_seg_project/brats_seg_project/src/utils/: config.py  io.py  seed.py
configs/: segmentation.yaml
css/: style.css
js/: app.js
outputs/pipeline/: BraTS-GLI-00006-101-t1c_medical_report.txt
qynerva_classification_project/: README.md  evaluate_classification.py  pyproject.toml
qynerva_classification_project/SRC/: __init__.py  example_integration.py  main_predict.py  main_train.py  main_volume.py
qynerva_classification_project/SRC/config/: __init__.py  config.py
qynerva_classification_project/SRC/data/: __init__.py  dataset.py  splitter.py
qynerva_classification_project/SRC/models/: __init__.py  efficientnet.py
qynerva_classification_project/SRC/prediction/: __init__.py  predictor.py
qynerva_classification_project/SRC/training/: __init__.py  callbacks.py  trainer.py
qynerva_classification_project/SRC/utils/: __init__.py  logger.py  visualization.py
qynerva_classification_project/SRC/volume/: __init__.py  aggregator.py  inference.py  loader.py  reporter.py  xai_runner.py
qynerva_classification_project/SRC/xai/: __init__.py  hirescam.py  visualization.py
qynerva_classification_project/qynerva_classification.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/qynerva/classification/: config.py
src/qynerva/classification/data/: dataset.py  splitter.py
src/qynerva/classification/models/: efficientnet.py
src/qynerva/classification/prediction/: predictor.py
src/qynerva/classification/training/: callbacks.py  trainer.py
src/qynerva/classification/volume/: aggregator.py  inference.py  loader.py  xai_runner.py
src/qynerva/classification/xai/: hirescam.py  visualization.py
src/qynerva/pipeline/: chatbot.py  display.py  runner.py
src/qynerva/segmentation/data/: dataset.py  splits.py  transforms.py
src/qynerva/segmentation/engine/: trainer.py
src/qynerva/segmentation/losses/: segmentation.py
src/qynerva/segmentation/models/: unet3d.py
src/qynerva/segmentation/utils/: config.py  io.py  metrics.py  seed.py
