[project]
name = "brats-segmentation"
version = "0.1.0"
description = "Clean BraTS 2021 3D segmentation training pipeline"
requires-python = ">=3.10"

dependencies = [
  "torch>=2.2.0",
  "monai>=1.3.2",
  "nibabel>=5.2.1",
  "numpy>=1.26.4",
  "scikit-learn>=1.4.2",
  "tqdm>=4.66.4",
  "pyyaml>=6.0.1"
]

[project.scripts]
brats-train = "scripts.train:main"
brats-predict = "scripts.predict:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]